removed billrivedao. Still trying to persist bill (see previous commit log for mroe info)